# low_level_experiments

./: .gitignore  Makefile  README.md  dump.md  papers.md  requirements.txt
instruction_level_optimization/: CMakeLists.txt  Makefile  reduce.cpp
instruction_level_optimization/include/: arena_allocator.hpp  avx.hpp  cpu_gemm_runner.hpp  custom_kernels.hpp  debug.hpp  machine_info.hpp  matrix.hpp  mkl_kernels.hpp  naive_kernels.hpp  reduce.hpp  reduce_threaded.hpp  run_info.hpp  single_threaded_shuffle.hpp  sum_mode.hpp  timer.hpp
instruction_level_optimization/src/: avx.cpp  debug.cpp  matrix.cpp  reduce_threaded.cpp  run_info.cpp  runner.cpp
instruction_level_optimization/src/cache_experiment/: main.cpp  single_threaded_shuffle.cpp
instruction_level_optimization/src/cpu_gemm/: cpu_gemm_runner.cpp  custom_kernels.cpp  main.cpp  mkl_kernels.cpp  naive_kernels.cpp
instruction_level_optimization/src/cpu_gemm/tests/: test_loaders.cpp
instruction_level_optimization/src/reduce/: main.cpp  reduce.cpp  reduce_threaded.cpp
instruction_level_optimization/src/utils/: arena_allocator.cpp  debug.cpp  machine_info.cpp  timer.cpp
profiler/: profiler.py
profiler/inputs/: cache_experiment_input.json  input1.json  reduce_input.json
utils/: avx.hpp  debug.hpp  run_info.hpp  timer.hpp
